--- a/src/index.css
+++ b/src/index.css
@@ -278,7 +278,7 @@ body {
   top: 10%;
   flex-direction: column;
   justify-content: center;
-  width: 50vw;
+  width: 45vw;
   height: fit-content;
 }
 
@@ -325,7 +325,7 @@ body {
     backdrop-filter: blur(10px);
     outline: none;
     border: .5px solid lightgray;
-    border-radius: 8px;
+    border-radius: 16px;
     background-color: #80808015;
     padding: 8px 16px;
     width: 100%;
@@ -416,9 +416,9 @@ body {
   transition: all 0.3s ease-in-out;
   margin: 16px 0;
   border: .5px solid lightgray;
-  border-radius: 8px;
+  border-radius: 16px;
   background-color: #dddddda9;
-  padding: 8px 16px;
+  padding: 8px;
   min-height: 0;
   overflow-y: auto;
   scroll-behavior: auto;
@@ -452,7 +452,8 @@ body {
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
-    border-radius: 8px;
+    border: .5px solid rgba(255, 255, 255, 0);
+    border-radius: 16px;
     padding: 16px;
     width: 86px;
     height: fit-content;
@@ -492,7 +493,10 @@ body {
 
   .book:hover {
     backdrop-filter: blur(10);
-    background-color: rgba(211, 211, 211, 0.15);
+    transition: all 0.3s ease-in-out;
+    border: .5px solid lightgray;
+    border-radius: 16px;
+    background-color: #dddddda9;
   }
 
   .book.visible {
@@ -509,7 +513,8 @@ body {
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
-    border-radius: 8px;
+    border: .5px solid rgba(255, 255, 255, 0);
+    border-radius: 16px;
     padding: 16px;
     width: 86px;
     height: fit-content;
@@ -549,7 +554,10 @@ body {
 
   .movie:hover {
     backdrop-filter: blur(10);
-    background-color: rgba(211, 211, 211, 0.15);
+    transition: all 0.3s ease-in-out;
+    border: .5px solid lightgray;
+    border-radius: 16px;
+    background-color: #dddddda9;
   }
 
   .movie.visible {
@@ -566,10 +574,12 @@ body {
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
-    border-radius: 8px;
+    margin-bottom: 16px;
+    border: .5px solid rgba(255, 255, 255, 0);
+    border-radius: 16px;
     padding: 16px;
     width: fit-content;
-    height: fit-content;
+    min-height: fit-content;
     text-align: center;
 
     .text {
@@ -605,7 +615,10 @@ body {
 
   .album:hover {
     backdrop-filter: blur(10);
-    background-color: rgba(211, 211, 211, 0.15);
+    transition: all 0.3s ease-in-out;
+    border: .5px solid lightgray;
+    border-radius: 16px;
+    background-color: #dddddda9;
   }
 
   .album.visible {
@@ -732,8 +745,9 @@ body {
 }
 
 .book-result:hover,
-.movie-result:hover {
-  background-color: #F7F7F7;
+.movie-result:hover,
+.album-result:hover {
+  background-color: #f7f7f7f7;
 }
 
 .modal-open {
