--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 8px;
-  transition: all .5s;
+  transition: all .5s ease-in-out;
   cursor: pointer;
   margin: 0;
   padding: 0;
@@ -87,10 +87,14 @@ body {
   justify-content: center;
   align-items: center;
   gap: 0px;
+  backdrop-filter: blur(10px);
+  transition: all 0.3s ease-in-out;
   margin: 0px;
-  border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.5);
-  padding: 8px;
+  outline: none;
+  border: .5px solid lightgray;
+  border-radius: 16px;
+  background-color: #80808015;
+  padding: 8px 16px;
   width: fit-content;
   height: 16px;
   min-height: fit-content;
@@ -324,9 +328,9 @@ body {
     gap: 8px;
     backdrop-filter: blur(10px);
     outline: none;
-    border: .5px solid lightgray;
+    border: 0.1px solid #80808020;
     border-radius: 16px;
-    background-color: #80808015;
+    background-color: #efefef7d;
     padding: 8px 16px;
     width: 100%;
     height: 16px;
@@ -415,9 +419,10 @@ body {
   backdrop-filter: blur(10px);
   transition: all 0.3s ease-in-out;
   margin: 16px 0;
-  border: .5px solid lightgray;
+  border: 0.1px solid #80808020;
   border-radius: 16px;
-  background-color: #dddddda9;
+  /* background-color: #dddddda9; */
+  background-color: #efefef7d;
   padding: 8px;
   min-height: 0;
   overflow-y: auto;
@@ -427,7 +432,8 @@ body {
 .books-list.visible,
 .movies-list.visible,
 .albums-list.visible {
-  height: 432px;
+  height: fit-content;
+  max-height: 432px;
 }
 
 .fav-books,
@@ -437,6 +443,8 @@ body {
   flex-direction: row;
   justify-content: flex-start;
   gap: 8px;
+  transition: all 0.3s ease-in-out;
+  margin-bottom: 16px;
   border-radius: 8px;
   height: fit-content;
   min-height: 256px;
@@ -456,7 +464,7 @@ body {
     border-radius: 16px;
     padding: 16px;
     width: 86px;
-    height: fit-content;
+    height: auto;
     text-align: center;
 
     .text {
@@ -492,11 +500,12 @@ body {
   }
 
   .book:hover {
-    backdrop-filter: blur(10);
+    backdrop-filter: blur(20px);
     transition: all 0.3s ease-in-out;
-    border: .5px solid lightgray;
+    border: 0.1px solid #80808020;
     border-radius: 16px;
-    background-color: #dddddda9;
+    /* background-color: #dddddda9; */
+    background-color: #efefef7d;
   }
 
   .book.visible {
@@ -513,11 +522,12 @@ body {
     visibility: hidden;
     opacity: 0;
     transition: all 0.3s ease-in-out;
+    margin-bottom: 16px;
     border: .5px solid rgba(255, 255, 255, 0);
     border-radius: 16px;
     padding: 16px;
     width: 86px;
-    height: fit-content;
+    height: auto;
     text-align: center;
 
     .text {
@@ -532,14 +542,16 @@ body {
     .cover {
       -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-      transition: all 0.3s ease-in-out;
-      margin-bottom: 8px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all 0.5s ease-in-out;
+      margin: 8px 0;
       box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-      border-bottom-width: 15px;
       border-radius: 4px;
       width: 86px;
       height: 128px;
-      overflow: hidden;
+      overflow: visible;
 
       img {
         width: inherit;
@@ -548,16 +560,25 @@ body {
     }
 
     .cover:hover {
-      transform: rotate(-8deg) scale(1.1);
+      transform: rotate(-8deg);
     }
   }
 
   .movie:hover {
-    backdrop-filter: blur(10);
+
+    /* backdrop-filter: blur(20px);
     transition: all 0.3s ease-in-out;
-    border: .5px solid lightgray;
+    border: 0.1px solid #80808020;
     border-radius: 16px;
-    background-color: #dddddda9;
+    background-color: #dddddda9; 
+    background-color: #efefef7d; */
+    .cover {
+      scale: 1.1;
+
+      .ambilight {
+        filter: blur(6px);
+      }
+    }
   }
 
   .movie.visible {
@@ -569,6 +590,7 @@ body {
   .album {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     gap: 8px;
     visibility: hidden;
@@ -614,11 +636,12 @@ body {
   }
 
   .album:hover {
-    backdrop-filter: blur(10);
+    backdrop-filter: blur(20px);
     transition: all 0.3s ease-in-out;
-    border: .5px solid lightgray;
+    border: 0.1px solid #80808020;
     border-radius: 16px;
-    background-color: #dddddda9;
+    /* background-color: #dddddda9; */
+    background-color: #efefef7d;
   }
 
   .album.visible {
@@ -747,7 +770,13 @@ body {
 .book-result:hover,
 .movie-result:hover,
 .album-result:hover {
-  background-color: #f7f7f7f7;
+  -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+  -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+  backdrop-filter: blur(10px);
+  box-shadow: 0 2px 5px rgba(228, 228, 228, 0.25);
+  /* background-color: #f7f7f7; */
+  background-color: #ffffffa5;
+
 }
 
 .modal-open {
