--- a/src/styles/albumshelf.css
+++ b/src/styles/albumshelf.css
@@ -1,18 +1,18 @@
 .favAlbum {
-  background-color: #F7F7F7;
-  border: 0 solid lightgray;
-  position: absolute;
-  height: 10vw;
-  width: 10vw;
-  border-radius: 4px;
   -moz-box-shadow: -5px 0 5px -5px rgba(30, 30, 30, 0.25);
   -webkit-box-shadow: -5px 0 5px -5px rgba(30, 30, 30, 0.25);
-  box-shadow: -10px 0px 10px -5px rgba(30, 30, 30, 0.25);
-  z-index: 2;
   -moz-transition: -moz-transform 0.3s ease-in-out;
   -o-transition: -o-transform 0.3s ease-in-out;
   -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  position: absolute;
+  z-index: 2;
   transition: all 0.3s ease-in-out;
+  box-shadow: -10px 0px 10px -5px rgba(30, 30, 30, 0.25);
+  border: 0 solid lightgray;
+  border-radius: 4px;
+  background-color: #F7F7F7;
+  width: 10vw;
+  height: 10vw;
   overflow: hidden;
 
   img {
@@ -23,22 +23,22 @@
 
 .favAlbum:first-child {
   transition: all 0.3s ease-in-out;
-  margin-right: 24rem;
+  margin-right: 24vw;
 }
 
 .favAlbum:nth-child(2) {
   transition: all 0.3s ease-in-out;
-  margin-right: 18rem;
+  margin-right: 18vw;
 }
 
 .favAlbum:nth-child(3) {
   transition: all 0.3s ease-in-out;
-  margin-right: 12rem;
+  margin-right: 12vw;
 }
 
 .favAlbum:nth-child(4) {
   transition: all 0.3s ease-in-out;
-  margin-right: 6rem;
+  margin-right: 6vw;
 }
 
 .favAlbum:last-child {
@@ -46,50 +46,49 @@
 }
 
 .favAlbum:last-child:hover {
-  transition: all 0.3s ease-in-out;
   transform: rotate(8deg);
+  transition: all 0.3s ease-in-out;
 }
 
 
 .favAlbum:nth-child(2):hover {
   transition: all 0.3s ease-in-out;
-  margin-right: 20rem;
+  margin-right: 20vw;
 }
 
 .favAlbum:nth-child(3):hover {
   transition: all 0.3s ease-in-out;
-  margin-right: 14rem;
+  margin-right: 14vw;
 }
 
 .favAlbum:nth-child(4):hover {
   transition: all 0.3s ease-in-out;
-  margin-right: 8rem;
+  margin-right: 8vw;
 }
 
 .favAlbum:first-child:hover {
   transition: all 0.3s ease-in-out;
-  margin-right: 26rem;
+  margin-right: 26vw;
 }
 
 .favAlbum.slide-right {
-  transition: all 0.3s ease-in-out;
   -moz-transform: translateX(140px);
   -ms-transform: translateX(140px);
   -webkit-transform: translateX(140px);
   transform: translateX(140px);
+  transition: all 0.3s ease-in-out;
 }
 
 .favAlbum.back {
-  transition: all 0.3s ease-in-out;
-  z-index: 1;
-  opacity: 0;
   scale: 0.7;
+  opacity: 0;
+  z-index: 1;
+  transition: all 0.3s ease-in-out;
 }
 
 .favAlbums {
-  width: 100%;
-  min-width: 100%;
   display: flex;
   justify-content: flex-end;
+  width: 100%;
   height: 10vw;
 }
