--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -77,6 +77,7 @@
 
   .movie {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 8px;
@@ -87,7 +88,7 @@
     border: .5px solid rgba(255, 255, 255, 0);
     border-radius: 16px;
     padding: 16px;
-    width: 512px;
+    width: auto;
     overflow-y: hidden;
     text-align: center;
 
@@ -108,7 +109,6 @@
       justify-content: center;
       align-items: center;
       transition: all 0.5s ease-in-out;
-      margin: 8px 0;
       box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       border-radius: 4px;
       width: 86px;
