--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -83,10 +83,9 @@
     gap: 8px;
     visibility: hidden;
     opacity: 0;
-    transition: all 0.3s ease-in-out;
     margin: 8px 0;
-    border: .5px solid rgba(255, 255, 255, 0);
-    border-radius: 16px;
+    /* border: .5px solid rgba(255, 255, 255, 0); */
+    /* border-radius: 16px; */
     padding: 16px;
     width: auto;
     overflow-y: hidden;
@@ -108,7 +107,6 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      transition: all 0.5s ease-in-out;
       box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       border-radius: 4px;
       width: 86px;
@@ -125,23 +123,22 @@
         position: absolute;
         visibility: hidden;
         opacity: 0;
-        transition: all .2s ease-in-out;
       }
     }
 
     .cover:hover {
-      transform: rotate(-8deg);
+      /* transform: rotate(-8deg); */
     }
   }
 
   .movie:hover {
 
-    /* backdrop-filter: blur(20px);
-    transition: all 0.3s ease-in-out;
-    background-color: #efefef7d; */
-    border: 0.1px solid #80808020;
-    border-radius: 16px;
-    background-color: #dddddda9;
+    /* backdrop-filter: blur(20px); */
+    /* transition: all 0.3s ease-in-out; */
+    /* background-color: #efefef7d; */
+    /* border: 0.1px solid #80808020; */
+    /* border-radius: 16px; */
+    /* background-color: #dddddda9; */
 
     .cover {
       scale: 1.1;
@@ -153,7 +150,6 @@
         filter: brightness(10);
         filter: contrast(10);
         filter: blur(10px);
-        transition: all .5s ease-in-out;
       }
     }
   }
@@ -161,7 +157,7 @@
   .movie.visible {
     visibility: visible;
     opacity: 1;
-    transition: all 0.8s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
   .album {
