--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -6,10 +6,10 @@
   justify-content: flex-start;
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
-  width: fit-content;
+  width: 100%;
   height: fit-content;
-  /* overflow-x: auto; */
-  overflow: visible;
+  overflow-y: auto;
+  scroll-behavior: auto;
   white-space: nowrap;
 
   .book {
