--- a/src/styles/favourites.css
+++ b/src/styles/favourites.css
@@ -5,8 +5,11 @@
   flex-direction: row;
   justify-content: flex-start;
   transition: all 0.3s ease-in-out;
+  border: .5px solid rgba(255, 255, 255, 0);
   border-radius: 8px;
-  width: 100%;
+  border-radius: 16px;
+  padding: 0 16px 8px 16px;
+  width: calc(100% -16px);
   height: fit-content;
   overflow-y: auto;
   scroll-behavior: auto;
@@ -15,23 +18,25 @@
   .book {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
     visibility: hidden;
     opacity: 0;
-    transition: all 0.3s ease-in-out;
-    border: .5px solid rgba(255, 255, 255, 0);
-    border-radius: 16px;
+    margin: 8px 0;
+    /* border: .5px solid rgba(255, 255, 255, 0); */
+    /* border-radius: 16px; */
     padding: 16px;
-    width: 86px;
-    height: auto;
+    width: auto;
+    overflow: visible;
     text-align: center;
 
     .text {
-      flex-grow: 1;
-      margin: 0;
+      margin: 16px;
       padding: 0;
+      height: 156px;
       overflow: hidden;
+      text-align: left;
       text-overflow: ellipsis;
       white-space: normal;
     }
@@ -39,33 +44,57 @@
     .cover {
       -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       transition: all 0.3s ease-in-out;
-      margin-bottom: 8px;
+      margin-top: 8px;
       box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
-      border-bottom-width: 15px;
-      border-radius: 2px 8px 8px 2px;
+      border-radius: 4px;
       width: 86px;
       height: 128px;
-      overflow: hidden;
+      overflow: visible;
 
       img {
+        transition: all 0.3s ease-in-out;
+        border-radius: 4px;
         width: inherit;
         height: inherit;
+      }
+
+      .ambilight {
+        position: absolute;
+        visibility: hidden;
+        opacity: 0;
       }
     }
 
     .cover:hover {
-      transform: rotate(-8deg) scale(1.1);
+      /* transform: rotate(-8deg); */
     }
   }
 
   .book:hover {
-    backdrop-filter: blur(20px);
-    transition: all 0.3s ease-in-out;
-    border: 0.1px solid #80808020;
-    border-radius: 16px;
+
+    /* backdrop-filter: blur(20px); */
+    /* transition: all 0.3s ease-in-out; */
+    /* background-color: #efefef7d; */
+    /* border: 0.1px solid #80808020; */
+    /* border-radius: 16px; */
     /* background-color: #dddddda9; */
-    background-color: #efefef7d;
+
+    .cover {
+      scale: 1.1;
+
+      .ambilight {
+        scale: 1;
+        visibility: visible;
+        opacity: 100;
+        filter: brightness(10);
+        filter: contrast(10);
+        filter: blur(9px);
+      }
+    }
   }
 
   .book.visible {
@@ -165,25 +194,25 @@
   .album {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    gap: 8px;
+    gap: 16px;
     visibility: hidden;
     opacity: 0;
-    transition: all 0.3s ease-in-out;
-    margin-bottom: 16px;
-    border: .5px solid rgba(255, 255, 255, 0);
-    border-radius: 16px;
+    margin: 8px 0;
+    /* border: .5px solid rgba(255, 255, 255, 0); */
+    /* border-radius: 16px; */
     padding: 16px;
-    width: fit-content;
-    min-height: fit-content;
+    width: auto;
+    overflow: visible;
     text-align: center;
 
     .text {
-      flex-grow: 1;
-      margin: 0;
+      margin: 16px;
       padding: 0;
+      height: 156px;
       overflow: hidden;
+      text-align: left;
       text-overflow: ellipsis;
       white-space: normal;
     }
@@ -191,32 +220,57 @@
     .cover {
       -moz-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       -webkit-box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
+      display: flex;
+      justify-content: center;
+      align-items: center;
       transition: all 0.3s ease-in-out;
-      margin-bottom: 8px;
+      margin-top: 8px;
       box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
       border-radius: 4px;
       width: 128px;
       height: 128px;
-      overflow: hidden;
+      overflow: visible;
 
       img {
+        transition: all 0.3s ease-in-out;
+        border-radius: 4px;
         width: inherit;
         height: inherit;
+      }
+
+      .ambilight {
+        position: absolute;
+        visibility: hidden;
+        opacity: 0;
       }
     }
 
     .cover:hover {
-      transform: rotate(-8deg) scale(1.1);
+      /* transform: rotate(-8deg); */
     }
   }
 
   .album:hover {
-    backdrop-filter: blur(20px);
-    transition: all 0.3s ease-in-out;
-    border: 0.1px solid #80808020;
-    border-radius: 16px;
+
+    /* backdrop-filter: blur(20px); */
+    /* transition: all 0.3s ease-in-out; */
+    /* background-color: #efefef7d; */
+    /* border: 0.1px solid #80808020; */
+    /* border-radius: 16px; */
     /* background-color: #dddddda9; */
-    background-color: #efefef7d;
+
+    .cover {
+      scale: 1.1;
+
+      .ambilight {
+        scale: 1;
+        visibility: visible;
+        opacity: 100;
+        filter: brightness(10);
+        filter: contrast(10);
+        filter: blur(9px);
+      }
+    }
   }
 
   .album.visible {
