books, movies n albums interface done

--- a/src/styles/bookshelf.css
+++ b/src/styles/bookshelf.css
@@ -10,7 +10,7 @@
   box-shadow: 0 2px 5px rgba(30, 30, 30, 0.25);
   border-bottom-width: 15px;
   border-radius: 2px 8px 8px 2px;
-  background-color: red;
+  background-color: rgb(226, 226, 226);
   width: 7vw;
   height: 11vw;
   overflow: hidden;
