control - modals working

--- a/src/index.css
+++ b/src/index.css
@@ -235,6 +235,48 @@ body {
   color: black;
 }
 
+.chip-button {
+  display: flex;
+  align-items: center;
+  gap: 0;
+  backdrop-filter: blur(10px);
+  transition: all .5s ease-in-out;
+  outline: none;
+  border: 1px solid #80808020;
+  border-radius: 20px;
+  padding: 7px 8px;
+  width: fit-content;
+  height: fit-content;
+  min-height: fit-content;
+  color: gray;
+
+  * {
+    margin: 0;
+    padding: 0;
+  }
+
+  p {
+    transition: max-width .7s ease-in-out;
+    margin: 0;
+    padding: 0;
+    max-width: 0;
+    max-height: 16px;
+    overflow: hidden;
+  }
+}
+
+.chip-button:hover {
+  transition: all .5s ease-in-out;
+  cursor: pointer;
+  border: 1px solid #80808020;
+  background-color: #efefef7d;
+
+  p {
+    transition: max-width .7s ease-in-out;
+    max-width: 7rem;
+  }
+}
+
 .v-chip {
   display: flex;
   justify-content: center;
@@ -331,9 +373,9 @@ body {
     border: 0.1px solid #80808020;
     border-radius: 16px;
     background-color: #efefef7d;
-    padding: 8px 16px;
+    padding: 6px 12px;
     width: 100%;
-    height: 16px;
+    height: fit-content;
     min-height: fit-content;
     color: gray;
 
