--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,7 @@ body {
   gap: 8px;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 0.5);
-  padding: 8px;
-  height: 16px;
+  height: 24px;
   min-height: fit-content;
 }
 
@@ -218,9 +217,9 @@ body {
   justify-content: center;
   align-items: center;
   border: 0 dashed lightgray;
-  border-radius: 32px;
-  width: 32px;
-  height: 32px;
+  border-radius: 24px;
+  width: 24px;
+  height: 24px;
   overflow: hidden;
 
   img {
@@ -232,7 +231,7 @@ body {
 .posts-placeholder {
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 4px;
 }
 
 .text-chip-button {
@@ -266,6 +265,7 @@ body {
 
 .chip-button {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 0;
   backdrop-filter: blur(10px);
@@ -274,10 +274,10 @@ body {
   border: .1px solid #80808020;
   border-radius: 20px;
   background-color: #efefef7d;
-  padding: 7px 8px;
-  width: fit-content;
-  height: fit-content;
-  min-height: fit-content;
+  padding: 0;
+  width: 24px;
+  min-width: fit-content;
+  height: 24px;
   color: gray;
 
   * {
@@ -286,7 +286,7 @@ body {
   }
 
   p {
-    transition: max-width .7s ease-in-out;
+    transition: max-width .5s ease-in-out;
     margin: 0;
     padding: 0;
     max-width: 0;
@@ -300,6 +300,7 @@ body {
   cursor: pointer;
   border: .1px solid #80808020;
   background-color: #efefef7d;
+  padding: 0 8px;
 
   p {
     transition: max-width .7s ease-in-out;
