--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   margin: 0;
   padding: 0;
   color: gray;
+  font-size: 12px;
 
   * {
     width: 100%;
@@ -139,8 +140,7 @@ body {
 
 .post {
   display: flex;
-  flex-direction: column;
-  gap: 8px;
+  gap: 16px;
   transition: all .5s;
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 8px;
@@ -153,17 +153,6 @@ body {
   transition: all .5s;
   background-color: #F7F7F7;
   /* border: 1px solid rgb(220, 220, 220); */
-}
-
-.post-text {
-  display: flex;
-  flex-direction: column;
-  padding-left: 48px;
-  hyphens: auto;
-
-  * {
-    margin: 0;
-  }
 }
 
 .post-textarea {
@@ -199,16 +188,33 @@ body {
   display: flex;
   flex-direction: row;
   gap: 32px;
-  padding: 8px 48px 0 48px;
-  height: 16px;
+  padding-left: 2px;
+  height: 14px;
 }
 
 .post-profile {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   gap: 16px;
   width: fit-content;
+}
+
+.post-username {
+  display: flex;
+  align-items: center;
+}
+
+.post-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+
+  div {
+    display: flex;
+    align-items: center;
+    min-height: 24px;
+  }
 }
 
 .post-profile-pic {
