--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,7 @@ body {
   * {
     margin: 0;
     padding: 0;
+    overflow: hidden;
   }
 }
 
@@ -652,4 +653,66 @@ body {
   h3 {
     color: black;
   }
+}
+
+.edit-desc {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  width: 12px;
+  height: 12px;
+}
+
+.edit-desc.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.3s ease-in-out;
+  width: 12px;
+  height: 12px;
+}
+
+.edit-desc.visible:hover {
+  scale: 1.1;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  10% {
+    transform: rotate(16deg);
+  }
+
+  20% {
+    transform: rotate(-6deg);
+  }
+
+  30% {
+    transform: rotate(16deg);
+  }
+
+  40% {
+    transform: rotate(-4deg);
+  }
+
+  50% {
+    transform: rotate(16deg);
+  }
+
+  60% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
+.waving {
+  display: inline-block;
+  transform-origin: 75% 75%;
+  animation: wave 2.1s 0.6s infinite;
 }
