--- a/src/index.css
+++ b/src/index.css
@@ -143,7 +143,7 @@ body {
   display: flex;
   gap: 16px;
   transition: all .5s;
-  border: 1px solid rgba(255, 255, 255, 0);
+  border: .1px solid rgba(255, 255, 255, 0);
   border-radius: 8px;
   background-color: rgba(211, 211, 211, 0.0);
   /* background-color: rgba(211, 211, 211, 0.2); */
@@ -152,8 +152,11 @@ body {
 
 .post:hover {
   transition: all .5s;
-  background-color: #F7F7F7;
+  /* background-color: #F7F7F7; */
   /* border: 1px solid rgb(220, 220, 220); */
+  border: .1px solid #80808020;
+  border-radius: 20px;
+  background-color: #efefef7d;
 }
 
 .post-textarea {
