--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@ body {
 .ic-container.hidden-icon.profile-pic {
   position: absolute;
   z-index: 999;
-  background-color: #d3d3d3;
+  background-color: #d3d3d300;
   padding: 4px;
   width: 8px;
   height: 8px;
@@ -326,7 +326,7 @@ body {
   opacity: 0;
   transition: all 0.3s ease-in-out;
   border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.0);
   padding: 8px;
   height: fit-content;
   min-height: 16px;
